Remove String.isBlank from JobClient.java